[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/cartographer/terrain/carto_terrain_layers_editor.gd" type="Script" id=1]
[ext_resource path="res://addons/cartographer/icons/icon_remove.svg" type="Texture" id=2]
[ext_resource path="res://addons/cartographer/icons/icon_add.svg" type="Texture" id=3]

[node name="CartoTerrainLayersEditor" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UV1Scale" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 24.0

[node name="ULabel" type="Label" parent="UV1Scale"]
margin_top = 5.0
margin_right = 8.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.498039, 0, 0, 1 )
text = "u"

[node name="U" type="SpinBox" parent="UV1Scale"]
margin_left = 12.0
margin_right = 510.0
margin_bottom = 24.0
size_flags_horizontal = 3
step = 0.01

[node name="VLabel" type="Label" parent="UV1Scale"]
margin_left = 514.0
margin_top = 5.0
margin_right = 521.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0.498039, 0, 1 )
text = "v"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="V" type="SpinBox" parent="UV1Scale"]
margin_left = 525.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3
step = 0.01
value = 1.0

[node name="AddLayerFileDialog" type="FileDialog" parent="."]
margin_right = 307.0
margin_bottom = 130.0
window_title = "Open File(s)"
mode = 1
filters = PoolStringArray( "*.png ; PNG Images", "*.jpg ; JPG Images" )

[node name="TitleBox" type="HBoxContainer" parent="."]
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 42.0

[node name="HSeparator" type="HSeparator" parent="TitleBox"]
margin_right = 338.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TitleBox"]
margin_left = 342.0
margin_right = 680.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Layers"
align = 1

[node name="HSeparator2" type="HSeparator" parent="TitleBox"]
margin_left = 684.0
margin_right = 1024.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="ButtonBox" type="HBoxContainer" parent="."]
margin_top = 46.0
margin_right = 1024.0
margin_bottom = 68.0
size_flags_horizontal = 3

[node name="Add" type="Button" parent="ButtonBox"]
margin_right = 510.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Add Layer"
icon = ExtResource( 3 )

[node name="Rem" type="Button" parent="ButtonBox"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Remove"
icon = ExtResource( 2 )

[node name="Layers" type="ItemList" parent="."]
margin_top = 72.0
margin_right = 1024.0
margin_bottom = 472.0
rect_min_size = Vector2( 0, 400 )
size_flags_horizontal = 3
fixed_icon_size = Vector2( 64, 64 )
[connection signal="file_selected" from="AddLayerFileDialog" to="." method="_on_set_layer_file"]
[connection signal="files_selected" from="AddLayerFileDialog" to="." method="_on_add_layer_files"]
[connection signal="pressed" from="ButtonBox/Add" to="." method="_on_add_layer"]
[connection signal="pressed" from="ButtonBox/Rem" to="." method="_on_rem_layer"]
[connection signal="item_activated" from="Layers" to="." method="_on_activate_layer"]
[connection signal="item_selected" from="Layers" to="." method="_on_select_layer"]
